# RaymarcherSFML

./: CMakeLists.txt  README.md
assets/Scenes/: example_scene.sc
headers/: Object2D.h  Objects.h  Player.h  Raymarcher.h  Renderer.h  Scene.h
headers/utils/: Vec2utils.h
src/: Player.cpp  Raymarcher.cpp  Renderer.cpp  Scene.cpp  main.cpp
